--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 env/*
-set3/mt19937
-set3/rmt19937/target
-set3/crack_mt32seed/target
+challenges/mt19937
+challenges/rmt19937/target
+challenges/crack_mt32seed/target
 */__pycache__
